<resources>
    <!-- Strings Automaticos -->
    <string name="app_name">ViveroDV</string>
    <string name="action_settings">Settings</string>

    <!-- General -->
    <string name="nombre_vivero">Vivero Da Vinci</string>
    <string name="logo_alt_txt">Logo del vivero</string>
    <string name="titulo">Alta de nuevos productos</string>

    <!-- Main/Home -->
    <string name="saludo">¡Bienvenido!</string>
    <string name="btn_catalogo">Ver Catálogo</string>
    <string name="btn_carrito">Ver Carrito</string>

    <!-- Catalogo -->
    <string name="titulo_catalogo">Catálogo de Plantas</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="mje_agregado_ok">Producto agregado al carrito</string>
    <string name="ver_mas">Ver más</string>

    <!-- Carrito -->
    <string name="titulo_carrito">Tu Carrito</string>
    <string name="total">Total:</string>
    <string name="eliminar">Eliminar</string>
    <string name="mje_producto_eliminado">Producto eliminado</string>
    <string name="vaciar_carrito">Vaciar carrito</string>
    <string name="mje_carrito_vaciado">Carrito vaciado</string>
    <string name="ir_a_pago">Ir a Pago</string>

    <!-- Pago -->
    <string name="seccion_pago">En desarrollo...</string>

    <!-- Formulario -->
    <string name="placeholder_nombre">Nombre</string>
    <string name="placeholder_tipo">Tipo</string>
    <string name="placeholder_precio">Precio</string>
    <string name="btn_agregar">Agregar</string>

    <!-- Otros -->
    <string name="mje_error_campo_vacio">Por favor, complete todos los campos.</string>
    <string name="formato_txt_tarjeta">Planta: %1$s\nTipo: %2$s\nPrecio: $%3$s</string>
</resources>