<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_100"
    tools:context=".MainActivity">

    <!-- Contenedor principal en vertical -->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingBottom="8dp"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- HEADER -->
        <include layout="@layout/layout_base_header" />

        <!-- CONTENIDO HOME -->
        <FrameLayout
            android:id="@+id/home_content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/saludo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saludo"
                android:textColor="@color/emerald_800"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_catalogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/emerald_800"
            android:text="@string/btn_catalogo"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white" />
            
            <Button
            android:id="@+id/btn_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/emerald_800"
            android:text="@string/btn_carrito"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>